--- a/qualification_hub/templates/certificates/certificate_detail.html
+++ b/qualification_hub/templates/certificates/certificate_detail.html
@@ -1,24 +1,73 @@
 {% extends '../base.html' %}
+{% load core_tags i18n %}  <!-- Load the translation tag library -->
 
-{% block title %}Certificate Detail{% endblock %}
+{% block title %}{% trans "Certificate Detail" %}{% endblock %}
 
 {% block content %}
-<h1>{{ certificate.certificate_name }}</h1>
-<p><strong>Organization:</strong> {{ certificate.organization }}</p>
-<p><strong>Description:</strong> {{ certificate.description }}</p>
-<p><strong>Expiration Date:</strong> {{ certificate.expiration_date }}</p>
-<p><strong>Issued By:</strong> {{ certificate.issuing_authority }}</p>
-<p><strong>Certificate Number:</strong> {{ certificate.certificate_number }}</p>
-<p><strong>Date Earned:</strong> {{ certificate.date_earned }}</p>
-<p><strong>Verification URL:</strong> <a href="{{ certificate.verification_url }}">{{ certificate.verification_url }}</a></p>
+<div class="container mt-4 mb-4">
+    <h1 class="display-5">{{ certificate.certificate_name }}</h1>
+    
+    <div class="card mt-3">
+        <div class="card-body">
+            <p class="card-text">
+                <strong>{% trans "Organization" %}:</strong> {{ certificate.organization }}
+            </p>
+            <p class="card-text">
+                <strong>{% trans "Description" %}:</strong> {{ certificate.description }}
+            </p>
+            <p class="card-text">
+                <strong>{% trans "Expiration Date"
+                    
+                    %}:
+                </strong> {{ certificate.expiration_date }}
+            </p>
+            <p class="card-text">
+                <strong>{% trans "Issued By" %}:</strong> {{ certificate.issuing_authority }}
+            </p>
+            <p class="card-text">
+                <strong>{% trans "Certificate Number" %}:</strong> {{ certificate.certificate_number }}
+            </p>
+            <p class="card-text">
+                <strong>{% trans "Date Earned" %}:</strong> {{ certificate.date_earned }}
+            </p>
+            <p class="card-text">
+                <strong>{% trans "Verification URL" %}:</strong> 
+                <a href="{{ certificate.verification_url }}" class="btn btn-link">
+                    {{ certificate.verification_url }}
+                </a>
+            </p>
+            
+            {% if certificate.teacher_owner %}
+                <p class="card-text">
+                    <strong>{% trans "Owner" %}:</strong> {{ certificate.teacher_owner.user.username }}
+                </p>
+            {% elif certificate.student_owner %}
+                <p class="card-text">
+                    <strong>{% trans "Owner" %}:</strong> {{ certificate.student_owner.user.username }}
+                </p>
+            {% endif %}
+        </div>
+    </div>
 
-{% if certificate.teacher_owner %}
-    <p><strong>Owner (Teacher):</strong> {{ certificate.teacher_owner.user.username }}</p>
-{% elif certificate.student_owner %}
-    <p><strong>Owner (Student):</strong> {{ certificate.student_owner.user.username }}</p>
-{% endif %}
-
-<a href="{% url 'certificates:update' certificate.pk %}">Edit Certificate</a>
-<a href="{% url 'certificates:delete' certificate.pk %}">Delete Certificate</a>
-<a href="{% url 'certificates:list' %}">Back to Certificate List</a>
+    <div class="mt-4">
+        {% if user.is_authenticated %}
+        {% if user.pk == certificate.teacher_owner.user.pk or user.pk == certificate.student_owner.user.pk or user|in_group:'Managers' %}
+        <a href="{% url 'certificates:update' certificate.pk %}" class="btn btn-warning">
+            <i class="bi bi-pencil-square"></i> {% trans "Edit Certificate" %}
+        </a>
+        
+        <form method="post" action="{% url 'certificates:delete' certificate.pk %}" style="display: inline-block;">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-danger">
+                <i class="bi bi-trash"></i> {% trans "Delete Certificate" %}
+            </button>
+        </form>
+        {% endif %}
+        {% endif %}
+        
+        <a href="{% url 'certificates:list' %}" class="btn btn-secondary">
+            <i class="bi bi-arrow-left"></i> {% trans "Back to Certificate List" %}
+        </a>
+    </div>
+</div>
 {% endblock %}
