--- a/qualification_hub/templates/certificates/certificate_list.html
+++ b/qualification_hub/templates/certificates/certificate_list.html
@@ -1,20 +1,86 @@
 {% extends '../base.html' %}
-
-{% block title %}Certificate List{% endblock %}
+{% load core_tags i18n %}
+{% load static %}
+{% block title %}{% trans "Certificate List" %}{% endblock %}
 
 {% block content %}
-<h1>Certificate List</h1>
-<ul>
-{% for certificate in certificates %}
-    <li>
-        <a href="{% url 'certificates:detail' certificate.pk %}">{{ certificate.certificate_name }} - {{ certificate.organization }}</a>
-        {% if certificate.teacher_owner %}
-            (Owned by Teacher: {{ certificate.teacher_owner.full_name }})
-        {% elif certificate.student_owner %}
-            (Owned by Student: {{ certificate.student_owner.full_name }})
-        {% endif %}
-    </li>
-{% endfor %}
-</ul>
-<a href="{% url 'certificates:create' %}">Create New Certificate</a>
+<div class="container">
+  {% if user.is_authenticated %}
+    {% if user|in_group:'Teachers' or user|in_group:'Students' %}
+    <div class="mb-3">
+      <a href="{% url 'certificates:create' %}" class="btn btn-primary">
+        {% trans "Create New Certificate" %}
+      </a>
+    </div>
+    {% endif %}
+  {% endif %}
+  <section class="my-5">
+    <div class="row">
+      {% for certificate in page_obj %}
+      <div class="col-md-4 mb-4"> <!-- 3 columns per row -->
+        <div class="card">
+          <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
+            <img src="{% static 'assets/certificates/image/default_certificate.jpg' %}" class="img-fluid" />
+            <a href="#!">
+              <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+            </a>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title font-weight-bold">{{ certificate.certificate_name }}</h5>
+            <p>{{ certificate.organization }}</p>
+            <p class="card-text">{% trans "Description" %}: {{ certificate.description }}</p>
+            <hr class="my-4" />
+            <a href="{% url 'certificates:detail' certificate.id %}" class="btn btn-link link-secondary p-md-1 mb-0">
+              {% trans "View Details" %}
+            </a>
+            {% if certificate.teacher_owner %}
+              <a href="{% url 'teachers:detail' certificate.teacher_owner.pk %}" class="btn btn-link link-secondary p-md-1 mb-0">
+                @{{ certificate.teacher_owner.user }}
+              </a>
+            {% elif certificate.student_owner %}
+              <a href="{% url 'students:detail' certificate.student_owner.pk %}" class="btn btn-link link-secondary p-md-1 mb-0">
+                @{{ certificate.student_owner.user }}
+              </a>
+            {% else %}
+              <a href="#" class="btn btn-link link-secondary p-md-1 mb-0">
+                {% trans "@None" %}
+              </a>
+            {% endif %}
+          </div>
+        </div>
+      </div>
+      {% endfor %}
+    </div>
+
+    <!-- Pagination controls -->
+    <div class="pagination-wrapper">
+      <nav aria-label="{% trans "Page navigation" %}">
+        <ul class="pagination">
+          {% if page_obj.has_previous %}
+            <li class="page-item">
+              <a class="page-link" href="?page={{ page_obj.previous_page_number }}">
+                {% trans "Previous" %}
+              </a>
+            </li>
+          {% endif %}
+
+          <!-- Display page numbers with current page highlighted -->
+          {% for page_num in page_obj.paginator.page_range %}
+            <li class="page-item {% if page_num == page_obj.number %}active{% endif %}">
+              <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
+            </li>
+          {% endfor %}
+
+          {% if page_obj.has_next %}
+            <li class="page-item">
+              <a class="page-link" href="?page={{ page_obj.next_page_number }}">
+                {% trans "Next" %}
+              </a>
+            </li>
+          {% endif %}
+        </ul>
+      </nav>
+    </div>
+  </section>
+</div>
 {% endblock %}
