--- a/qualification_hub/templates/registration/password_reset_complete.html
+++ b/qualification_hub/templates/registration/password_reset_complete.html
@@ -1,17 +1,52 @@
-<h2>Password Reset Successful!</h2>
-<p>
-  Congratulations! Your password has been successfully reset. You can now
-  <a href="{% url 'core:login' %}">log in</a> with your new password.
-</p>
+{% extends "base.html" %}
+{% load static i18n %}
 
-<p>
-  If you're using a password manager, don't forget to update it with your new
-  password to ensure seamless access in the future.
-</p>
+{% block title %}{% trans "Password Reset Successful" %}{% endblock %}
 
-<p>
-  If you encounter any issues logging in or if you have questions, please
-  contact our support team for assistance.
-</p>
+{% block content %}
+<section class="p-3 p-md-4 p-xl-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-12 col-md-6 bsb-tpl-bg-platinum">
+        <div class="d-flex flex-column justify-content-between h-100 p-3 p-md-4 p-xl-5" style="background: #cecece;">
+          <h3>{% trans "Welcome" %}!</h3>
+          <img
+            class="img-fluid rounded mx-auto my-4"
+            loading="lazy"
+            src="{% static 'assets/registration/image/password-reset-complete.jpg' %}"
+            alt="{% trans "Login Image" %}"
+            style="object-fit: cover; width: 100%; height: 100%;"
+          >
+          <p>
+            {% trans "Not a member yet" %}?
+            <a href="{% url 'core:register' %}" class="link-secondary text-decoration-none">{% trans "Register now" %}</a>
+          </p>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 bsb-tpl-bg-lotion">
+        <div class="p-3 p-md-4 p-xl-5">
+          <h3>{% trans "Password Reset Successful" %}!</h3>
+          <p>
+            {% trans "Congratulations! Your password has been successfully reset. You can now log in with your new password." %}
+            <a href="{% url 'core:login' %}">{% trans "log in" %}</a> 
+            {% trans "with your new password." %}
+          </p>
+          <p>
+            {% trans "If you're using a password manager, don't forget to update it with your new password for seamless access." %}
+          </p>
+          <p>
+            {% trans "If you encounter any issues logging in or have questions, please contact our support team for assistance." %}
+          </p>
+          <p>
+            {% trans "Thank you for choosing our platform. We're glad to have you back!" %}
+          </p>
 
-<p>Thank you for choosing our platform. We're glad to have you back!</p>
+          <div class="text-end mt-3">
+            <a href="{% url 'core:login' %}" class="btn btn-primary">{% trans "Log in now" %}</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+{% endblock %}
