--- a/qualification_hub/templates/registration/password_reset_email.html
+++ b/qualification_hub/templates/registration/password_reset_email.html
@@ -1,14 +1,83 @@
 {% autoescape off %}
-Subject: Password Reset Request for {{ site_name }}
-
-Hello {{ user.get_full_name }} ({{ user.username }}),
-
-It seems you requested to reset your password for your {{ site_name }} account. To proceed, please click the link below:
-
-{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
-
-If you didn't make this request, you can safely ignore this email. Your current password will remain unchanged.
-
-Thank you,
-{{ site_name }} Team
-{% endautoescape %}
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+    <meta charset="UTF-8">
+    <title>Reset Password Email</title>
+    <style type="text/css">
+        body {
+            margin: 0;
+            padding: 0;
+            background-color: #f2f3f8;
+            font-family: 'Open Sans', sans-serif;
+        }
+        a {
+            color: #20e277;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style> 
+</head>
+<body>
+    <table border="0" cellpadding="0" cellspacing="0" width="100%" bgcolor="#f2f3f8" style="font-family: 'Open Sans', sans-serif;">
+        <tr>
+            <td>
+                <table width="100%" style="max-width:670px; margin: 0 auto; background-color: #f2f3f8;">
+                    <tr>
+                        <td style="height:80px;">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <td style="text-align:center;">
+                            <img src="https://i.ibb.co/hL4XZp2/android-chrome-192x192.png" width="60" alt="Logo" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="height:20px;">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <table width="95%" align="center" cellpadding="0" cellspacing="0" bgcolor="#ffffff" style="max-width:670px; border-radius:3px; box-shadow:0 6px 18px 0 rgba(0,0,0,.06); text-align:center;">
+                                <tr>
+                                    <td style="padding:40px 35px;">
+                                        <h1 style="font-size:32px; font-weight:500; color:#1e1e2d;">Password Reset Request</h1>
+                                        <span style="display:inline-block; width:100px; border-bottom:1px solid #cecece; margin:29px 0 26px;"></span>
+                                        <p style="color:#455056; font-size:15px; line-height:24px; margin:0;">
+                                            We received a request to reset your password. Click the link below to reset your password:
+                                        </p>
+                                        <a href="{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}" 
+                                           style="background:#20e277; color:#fff; font-weight:500; text-transform:uppercase; font-size:14px; padding:10px 24px; border-radius:50px; display:inline-block; margin-top:35px;">
+                                           Reset Password
+                                        </a>
+                                        <p style="color:#455056; font-size:15px; line-height:24px; margin:0; margin-top:20px;">
+                                            If you didn't request a password reset, you can ignore this email. Your password will remain unchanged.
+                                        </p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td style="height:40px;">&nbsp;</td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="height:20px;">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <td style="text-align:center;">
+                            <p style="font-size:14px; color:rgba(69, 80, 86, .74);">
+                                &copy; {{ current_year }} {{ site_name }}. All rights reserved.
+                            </p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="height:80px;">&nbsp;</td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+    </table>
+</body>
+</html>
+{% endautoescape off %}
