--- a/qualification_hub/templates/certificates/certificate_confirm_delete.html
+++ b/qualification_hub/templates/certificates/certificate_confirm_delete.html
@@ -1,13 +1,27 @@
-{% extends '../base.html' %}
+{% extends "../base.html" %}
+{% load i18n %}  <!-- Load translation tags -->
 
-{% block title %}Delete Certificate{% endblock %}
+{% block title %}{% trans "Delete Certificate" %}{% endblock %}
 
 {% block content %}
-<h1>Delete Certificate</h1>
-<p>Are you sure you want to delete "{{ certificate.certificate_name }}"?</p>
-<form method="post">
-    {% csrf_token %}
-    <button type="submit">Delete</button>
-</form>
-<a href="{% url 'certificates:detail' certificate.pk %}">Cancel</a>
+<div class="m-3">
+  <div class="container mt-4">
+    <h1 class="mb-4">{% trans "Delete certificate" %}: {{ certificate.certificate_name }}</h1>
+    <div class="alert alert-warning">
+      <i class="bi bi-exclamation-triangle-fill"></i> 
+      {% trans "Are you sure you want to delete" %} "{{ certificate.certificate_name }}"?
+    </div>
+
+    <form method="post" class="d-inline">
+      {% csrf_token %}
+      <button type="submit" class="btn btn-danger">
+        <i class="bi bi-trash-fill"></i> {% trans "Delete" %}
+      </button>
+    </form>
+
+    <a href="{% url 'certificates:list' %}" class="btn btn-secondary ms-2">
+      <i class="bi bi-arrow-left-circle-fill"></i> {% trans "Back to List" %}
+    </a>
+  </div>
+</div>
 {% endblock %}
