--- a/qualification_hub/templates/departments/department_list.html
+++ b/qualification_hub/templates/departments/department_list.html
@@ -1,39 +1,71 @@
-{% extends "../base.html" %}
-{% block title %}Departments{% endblock title %}
+{% extends "base.html" %}
+{% load i18n %}  <!-- Load the translation tag library -->
+
+{% block title %}{% trans "Departments" %}{% endblock %}
 
 {% block content %}
-<h1>Departments</h1>
-<a href="{% url 'departments:create' %}">Create New Department</a>
-
-<table>
-  <thead>
-    <tr>
-      <th>Department Name</th>
-      <th>Department Head</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for department in departments %}
-    <tr>
-      <td>
-        <a href="{% url 'departments:detail' department.id %}">{{ department.name }}</a>
-      </td>
-      <td>
-        {{ department.head.get_full_name|default:'Not Assigned' }}
-      </td>
-      <td>
-        <a href="{% url 'departments:update' department.id %}">Edit</a>
-        |
-        <a href="{% url 'departments:delete' department.id %}">Delete</a>
-      </td>
-    </tr>
-    {% empty %}
-    <tr>
-      <td colspan="3">No departments found. <a href="{% url 'departments:create' %}">Create a new department</a>.</td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
-
-{% endblock content %}
+<div class="container mt-5">
+  <h1>{% trans "Departments" %}</h1>
+  
+  {% if user.is_authenticated and user.is_staff %}
+  <div class="mb-3">
+    <a href="{% url 'departments:create' %}" class="btn btn-primary">
+      {% trans "Create New Department" %}
+    </a>
+  </div>
+  {% endif %}
+  
+  <table class="table align-middle bg-white">
+    <thead class="bg-dark text-light">
+      <tr>
+        <th>{% trans "Department Name" %}</th>
+        <th>{% trans "Department Head" %}</th>
+        <th>{% trans "Faculty" %}</th>
+        {% if user.is_authenticated and user.is_staff %}
+        <th>{% trans "Actions" %}</th>
+        {% endif %}
+      </tr>
+    </thead>
+    <tbody>
+      {% for department in departments %}
+      <tr>
+        <td>
+          <a href="{% url 'departments:detail' department.id %}" class="fw-bold">
+            {{ department.name }}
+          </a>
+        </td>
+        <td>
+          {{ department.head.get_full_name|default:'Not Assigned' }}
+        </td>
+        <td>
+          {% if department.faculty %}
+            <a href="{% url 'faculties:detail' department.faculty.pk %}">{{ department.faculty }}</a>
+          {% else %}
+            {% trans "Not Assigned" %}
+          {% endif %}
+        </td>
+        
+        {% if user.is_authenticated and user.is_staff %}
+        <td>
+          <a href="{% url 'departments:update' department.id %}" class="btn btn-link btn-lg">
+            <i class="bi bi-pencil-square"></i>
+          </a>
+          |
+          <a href="{% url 'departments:delete' department.id %}" class="btn btn-link text-danger btn-lg">
+            <i class="bi bi-trash-fill"></i>
+          </a>
+        </td>
+        {% endif %}
+      </tr>
+      {% empty %}
+      <tr>
+        <td colspan="4" class="text-center">
+          {% trans "No departments found." %} 
+          <a href="{% url 'departments:create' %}">{% trans "Create a new department" %}</a>.
+        </td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+</div>
+{% endblock %}
