--- a/qualification_hub/templates/faculties/faculty_list.html
+++ b/qualification_hub/templates/faculties/faculty_list.html
@@ -1,39 +1,78 @@
-{% extends "../base.html" %}
-{% block title %}Faculties{% endblock title %}
+{% extends "base.html" %}
+{% load static i18n %}
+
+{% block title %}{% trans "Faculties" %}{% endblock %}
 
 {% block content %}
-<h1>Faculties</h1>
-<a href="{% url 'faculties:create' %}">Create New Faculty</a>
-
-<table>
-  <thead>
-    <tr>
-      <th>Faculty Name</th>
-      <th>Dean</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for faculty in faculties %}
-    <tr>
-      <td>
-        <a href="{% url 'faculties:detail' faculty.id %}">{{ faculty.name }}</a>
-      </td>
-      <td>
-        {{ faculty.dean.get_full_name|default:'Not Assigned' }}
-      </td>
-      <td>
-        <a href="{% url 'faculties:update' faculty.id %}">Edit</a>
-        |
-        <a href="{% url 'faculties:delete' faculty.id %}">Delete</a>
-      </td>
-    </tr>
-    {% empty %}
-    <tr>
-      <td colspan="3">No faculties found. <a href="{% url 'faculties:create' %}">Create a new faculty</a>.</td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
-
-{% endblock content %}
+<div class="container mt-5">
+  <h1>{% trans "Faculties" %}</h1>
+  
+  {% if user.is_authenticated and user.is_staff %}
+  <div class="mb-3">
+    <a href="{% url 'faculties:create' %}" class="btn btn-primary">
+      {% trans "Create New Faculty" %}
+    </a>
+  </div>
+  {% endif %}
+  
+  <table class="table align-middle bg-white">
+    <thead class="bg-dark text-light">
+      <tr>
+        <th>{% trans "Faculty Name" %}</th>
+        <th>{% trans "Dean" %}</th>
+        <th>{% trans "Website" %}</th>
+        <th>{% trans "Contact Email" %}</th>
+        <th>{% trans "Location" %}</th>
+        <th>{% trans "Created At" %}</th>
+        {% if user.is_authenticated and user.is_staff %}
+        <th>{% trans "Actions" %}</th>
+        {% endif %}
+      </tr>
+    </thead>
+    <tbody>
+      {% for faculty in faculties %}
+      <tr>
+        <td>
+          <a href="{% url 'faculties:detail' faculty.id %}">{{ faculty.name }}</a>
+        </td>
+        <td>
+          {{ faculty.dean.get_full_name|default:'Not Assigned' }}
+        </td>
+        <td>
+          <a href="{{ faculty.website|default:'#' }}" target="_blank">
+            {{ faculty.website|default:'No website' }}
+          </a>
+        </td>
+        <td>
+          {{ faculty.contact_email|default:'No contact email' }}
+        </td>
+        <td>
+          {{ faculty.location|default:'No location' }}
+        </td>
+        <td>
+          {{ faculty.created_at|date:"d M Y" }}
+        </td>
+        {% if user.is_authenticated and user.is_staff %}
+        <td>
+          <a href="{% url 'faculties:update' faculty.id %}" class="btn btn-link btn-lg">
+            <i class="bi bi-pencil-square"></i>
+          </a>
+          |
+          <a href="{% url 'faculties:delete' faculty.id %}" class="btn btn-link text-danger btn-lg">
+            <i class="bi bi-trash-fill"></i>
+          </a>
+        </td>
+        {% endif %}
+      </tr>
+      {% empty %}
+      <tr>
+        <td colspan="7" class="text-center">
+          {% trans "No faculties found." %}
+          <a href="{% url 'faculties:create' %}">{% trans "Create a new faculty" %}</a>.
+        </td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+</div>
+{% endblock %}
