--- a/qualification_hub/templates/registration/password_reset_form.html
+++ b/qualification_hub/templates/registration/password_reset_form.html
@@ -1,28 +1,71 @@
-<h2>Reset Your Password</h2>
-<p>
-  If you've forgotten your password, don't worry. Just enter your email address
-  below, and we'll send you a link to reset your password.
-</p>
+{% extends "base.html" %}
+{% load static i18n %}
 
-<form method="post">
-  {% csrf_token %}
-  <div>
-    <label for="email">Email Address:</label>
-    <input
-      type="email"
-      id="email"
-      name="email"
-      required
-      placeholder="Enter your email"
-    />
+{% block title %}{% trans "Reset Password" %}{% endblock %}
+
+{% block content %}
+<section class="p-3 p-md-4 p-xl-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-12 col-md-6 bsb-tpl-bg-platinum">
+        <div class="d-flex flex-column justify-content-between h-100 p-3 p-md-4 p-xl-5" style="background: #cecece;">
+          <h3>{% trans "Reset Your Password" %}</h3>
+          <img
+            class="img-fluid rounded mx-auto my-4"
+            loading="lazy"
+            src="{% static 'assets/registration/image/password-reset.jpg' %}"
+            alt="{% trans "Password Reset Image" %}"
+            style="object-fit: cover; width: 100%; height: 100%;"
+          >
+          <p>
+            {% trans "If you've forgotten your password, enter your email address below, and we'll send you a link to reset it." %}
+          </p>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 bsb-tpl-bg-lotion">
+        <div class="p-3 p-md-4 p-xl-5">
+
+          <!-- Display error messages -->
+          {% if messages %}
+          <div class="alert alert-danger">
+            {% for message in messages %}
+              {{ message }}
+            {% endfor %}
+          </div>
+          {% endif %}
+
+          <!-- Form for password reset -->
+          <form method="post">
+            {% csrf_token %}
+            <div class="row gy-3 gy-md-4">
+              <div class="col-12">
+                <label for="email" class="form-label">{% trans "Email Address" %}:</label>
+                <input
+                  type="email"
+                  class="form-control"
+                  id="email"
+                  name="email"
+                  required
+                  placeholder="{% trans "Enter your email" %}"
+                />
+              </div>
+              <div class="col-12 d-grid">
+                <button type="submit" class="btn btn-primary">{% trans "Send Reset Link" %}</button>
+              </div>
+            </div>
+          </form>
+
+          <p class="mt-4">
+            {% trans "After you receive the email, click the link to set your new password. If you don't get the email, check your spam/junk folder or contact support." %}
+          </p>
+
+          <div class="d-flex justify-content-between mt-4">
+            <a href="{% url 'core:login' %}" class="link-secondary">{% trans "Log in" %}</a>
+            <a href="{% url 'core:register' %}" class="link-secondary">{% trans "Register" %}</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  <button type="submit">Send Reset Link</button>
-</form>
-
-<p>
-  After you receive the email, click the link provided to set a new password. If
-  you don't receive the email, check your spam or junk folder. If you still
-  don't find it, you can request another reset link or contact our support team
-  for help.
-</p>
-<a href="{% url 'base' %}">Back to base</a>
+</section>
+{% endblock %}
