--- a/qualification_hub/templates/students/student_confirm_delete.html
+++ b/qualification_hub/templates/students/student_confirm_delete.html
@@ -1,16 +1,24 @@
 {% extends "../base.html" %}
-
-{% block title %}Delete Student{% endblock title %}
-
+{% load i18n %} 
+{% block title %}{% trans "Delete Student" %}{% endblock %}
 {% block content %}
-<div class="container">
-    <h1>Are you sure you want to delete this student?</h1>
-    <p>This action will permanently remove the student and the associated user account. This cannot be undone.</p>
+<div class="m-3">
+<div class="container mt-4">
+  <h1 class="mb-4">{% trans "Delete student" %}: {{ student.user }}</h1>
+  <div class="alert alert-warning">
+    <i class="bi bi-exclamation-triangle-fill"></i>{% blocktrans %}Are you sure you want to delete this {% endblocktrans %}"{{ student.user }}"{% blocktrans %} student?This will also delete the associated user. This action cannot be undone. {% endblocktrans %}
+  </div>
 
-    <form method="post">
-        {% csrf_token %}
-        <button type="submit" class="btn btn-danger">Yes, delete</button>
-        <a href="{% url 'students:list' %}" class="btn btn-secondary">No, cancel</a>
-    </form>
+  <form method="post" class="d-inline">
+    {% csrf_token %}
+    <button type="submit" class="btn btn-danger">
+      <i class="bi bi-trash-fill"></i>{% trans "Delete" %}
+    </button>
+  </form>
+
+  <a href="{% url 'students:list' %}" class="btn btn-secondary ms-2">
+    <i class="bi bi-arrow-left-circle-fill"></i>{% trans "Back to List" %}
+  </a>
+</div>
 </div>
 {% endblock %}
